--- a/index.html
+++ b/index.html
@@ -38,7 +38,6 @@
                 <h1>Salla and Raoul's wedding</h1>
                 <p>17th - 19th July, 2015</p>
                 <p>Storfinnhova Gård, Kemiönsaari, Suomi</p>
-                <p></p>
             </div>
         </div>
         <div class="container">
@@ -46,10 +45,11 @@
               <div class="col-md-4">
                 <div class="panel panel-default">
                   <div class="panel-heading">
-                    <h4>Databases</h4>
+                    <h4>Where?</h4>
                   </div>
                   <div class="panel-body">
-                    <p>I have spent a lot of time organising and cleaning data for various clients. I've worked up from Excel (not a database!) and Access to MySQL and Postgres, and across to Google Sheets (not a database!) and other API driven randomness. I've even played with Elasticsearch (not a database!). Experience is generally in building or repairing something to meet immediate business needs, which means I appreciate a good bit of design but understand how to put something flexible together before the use case has fully settled.</p>
+                      <iframe src="https://www.google.com/maps/embed?pb=!1m29!1m12!1m3!1d507622.53908164304!2d23.642391922293648!3d60.19892880793209!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!4m14!1i0!3e0!4m5!1s0x46920bc796210691%3A0xcd4ebd843be2f763!2sHelsinki%2C+Finland!3m2!1d60.1733244!2d24.941024799999997!4m5!1s0x468c8ada6606eb9f%3A0x942128136bd0a82a!2sStorfinnhova+G%C3%A5rd%2C+Finnhovantie+163%2C+25860+Nordan%C3%A5%2C+Finland!3m2!1d60.109641999999994!2d22.539268999999997!5e0!3m2!1sen!2suk!4v1410809712874" width="450" height="450" frameborder="0" style="border:0"></iframe>
+                      <p></p>
                     <a href="#databases" class="btn btn-default">Learn More</a>
                   </div>
                 </div>
