--- a/index.html
+++ b/index.html
@@ -33,14 +33,14 @@
             </div>
         </div>
 
-        <div class="jumbotron">
-            <div class="container">
-                <h1>Salla and Raoul's wedding</h1>
-                <p>17th - 19th July, 2015</p>
-                <p>Storfinnhova Gård, Kemiönsaari, Suomi</p>
+        <div class="container main-width">
+            <div class="jumbotron">
+                <div class="container">
+                    <h1>Salla and Raoul's wedding</h1>
+                    <p>17th - 19th July, 2015</p>
+                    <p>Storfinnhova Gård, Kemiönsaari, Suomi</p>
+                </div>
             </div>
-        </div>
-        <div class="container">
             <div class="row">
               <div class="col-md-4">
                 <div class="panel panel-default">
