--- a/index.html
+++ b/index.html
@@ -21,7 +21,7 @@
     </head>
     <body>
         <div class="navbar navbar-inverse navbar-fixed-top" role="navigation">
-            <div class="container">
+            <div>
                 <div class="navbar-header">
                     <a class="navbar-brand" href="#">Stephen's portfolio</a>
                     <a class="navbar-brand" href="http://uk.linkedin.com/in/stephenraoulsullivan/">LinkedIn</a>
@@ -33,9 +33,9 @@
             </div>
         </div>
 
-        <div class="container main-width">
+        <div class="main-width">
             <div class="jumbotron">
-                <div class="container">
+                <div>
                     <h1>Salla and Raoul's wedding</h1>
                     <p>17th - 19th July, 2015</p>
                     <p>Storfinnhova Gård, Kemiönsaari, Suomi</p>
