single panel GO

--- a/index.html
+++ b/index.html
@@ -42,7 +42,6 @@
                 </div>
             </div>
             <div class="row">
-              <div class="col-md-4">
                 <div class="panel panel-default">
                   <div class="panel-heading">
                     <h4>Where?</h4>
@@ -53,7 +52,8 @@
                     <a href="#databases" class="btn btn-default">Learn More</a>
                   </div>
                 </div>
-              </div>
+            </div>
+            <div class="row">
               <div class="col-md-4">
                 <div class="panel panel-default">
                   <div class="panel-heading">
