--- a/index.html
+++ b/index.html
@@ -4,7 +4,8 @@
         <meta charset="utf-8">
         <meta http-equiv="X-UA-Compatible" content="IE=edge">
         <meta name="viewport" content="width=device-width, initial-scale=1">
-        <title>Stephen's portfolio</title>
+        <meta name="robots" content="noindex">
+        <title>Salla and Raoul's wedding</title>
 
         <!-- Latest compiled and minified CSS -->
         <link rel="stylesheet" href="//maxcdn.bootstrapcdn.com/bootstrap/3.2.0/css/bootstrap.min.css">
@@ -42,8 +43,27 @@
                 </div>
             </div>
             <div class="row">
-                    <h4>Where?</h4>
-                      <iframe src="https://www.google.com/maps/embed?pb=!1m29!1m12!1m3!1d507622.53908164304!2d23.642391922293648!3d60.19892880793209!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!4m14!1i0!3e0!4m5!1s0x46920bc796210691%3A0xcd4ebd843be2f763!2sHelsinki%2C+Finland!3m2!1d60.1733244!2d24.941024799999997!4m5!1s0x468c8ada6606eb9f%3A0x942128136bd0a82a!2sStorfinnhova+G%C3%A5rd%2C+Finnhovantie+163%2C+25860+Nordan%C3%A5%2C+Finland!3m2!1d60.109641999999994!2d22.539268999999997!5e0!3m2!1sen!2suk!4v1410809712874" width="1000" height="450" frameborder="0" style="border:0"></iframe>
+              <h4>Where?</h4>
+              <iframe src="https://www.google.com/maps/embed?pb=!1m29!1m12!1m3!1d507622.53908164304!2d23.642391922293648!3d60.19892880793209!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!4m14!1i0!3e0!4m5!1s0x46920bc796210691%3A0xcd4ebd843be2f763!2sHelsinki%2C+Finland!3m2!1d60.1733244!2d24.941024799999997!4m5!1s0x468c8ada6606eb9f%3A0x942128136bd0a82a!2sStorfinnhova+G%C3%A5rd%2C+Finnhovantie+163%2C+25860+Nordan%C3%A5%2C+Finland!3m2!1d60.109641999999994!2d22.539268999999997!5e0!3m2!1sen!2suk!4v1410809712874" width="1000" height="450" frameborder="0" style="border:0"></iframe>
+            </div>
+            <div class="row">
+              <h4>When?</h4>
+              <ul>
+                <li>2015-07-17 14:00 Bus from Helsinki airport, realising how many trees there are in Finland</li>
+                <li>2015-07-17 18:00 Arrival at venue, introduction to mosquitos</li>
+                <li>2015-07-17 19:00 Pre-wedding BBQ, beers, sauna</li>
+              </ul>
+              <ul>
+                <li>2015-07-18 12:00 Wedding brunch</li>
+                <li>2015-07-18 12:01 Pimm's O'Clock</li>
+                <li>2015-07-18 18:00 Speeches, rings, vows, etc</li>
+                <li>2015-07-18 19:00 What you came for - dinner</li>
+                <li>2015-07-18 21:00 I guess there has to be music</li>
+              </ul>
+              <ul>
+                <li>2015-07-19 00:00 Sylvia Sullivan's birthday!</li>
+                <li>2015-07-19 12:00 Go away now please</li>
+              </ul>
             </div>
             <div class="row">
               <div class="col-md-4">
