My first version

--- a/index.html
+++ b/index.html
@@ -10,90 +10,77 @@
         <!-- Latest compiled and minified CSS -->
         <link rel="stylesheet" href="//maxcdn.bootstrapcdn.com/bootstrap/3.2.0/css/bootstrap.min.css">
         <link rel="stylesheet" href="main.css">
-        <!-- Optional theme -->
-        <!--<link rel="stylesheet" href="//maxcdn.bootstrapcdn.com/bootstrap/3.2.0/css/bootstrap-theme.min.css">-->
-
-        <!-- HTML5 Shim and Respond.js IE8 support of HTML5 elements and media queries -->
-        <!-- WARNING: Respond.js doesn't work if you view the page via file:// -->
+        <link href='http://fonts.googleapis.com/css?family=Concert+One|Lobster+Two' rel='stylesheet' type='text/css'>
         <!--[if lt IE 9]>
         <script src="https://oss.maxcdn.com/html5shiv/3.7.2/html5shiv.min.js"></script>
         <script src="https://oss.maxcdn.com/respond/1.4.2/respond.min.js"></script>
         <![endif]-->
     </head>
     <body>
-        <div class="navbar navbar-inverse navbar-fixed-top" role="navigation">
-            <div class="container">
-                <div class="navbar-header">
-                    <a class="navbar-brand" href="#">Stephen's portfolio</a>
-                    <a class="navbar-brand" href="http://uk.linkedin.com/in/stephenraoulsullivan/">LinkedIn</a>
-                    <a class="navbar-brand" href="https://github.com/raoulsullivan">GitHub</a>
-                    <a class="navbar-brand" href="#databases">Databases</a>
-                    <a class="navbar-brand" href="#collaboration">Collaboration tools</a>
-                    <a class="navbar-brand" href="#other">Other</a>
-                </div>
-            </div>
-        </div>
-
         <div class="container main-width">
             <div class="jumbotron">
                 <div class="container main-width">
                     <h1>Salla and Raoul's wedding</h1>
-                    <p>17th - 19th July, 2015</p>
-                    <p>Storfinnhova Gård, Kemiönsaari, Suomi</p>
+                    <div class="subheading"><p>17th - 19th July, 2015</p>
+                        <p><a href="http://www.storfinnhova.com/">Storfinnhova Gård</a>, <a href="http://en.wikipedia.org/wiki/Kimito%C3%B6n_(island)">Kemiönsaari</a>, Suomi</p></div>
                 </div>
             </div>
             <div class="row">
-              <h4>Where?</h4>
-              <iframe src="https://www.google.com/maps/embed?pb=!1m29!1m12!1m3!1d507622.53908164304!2d23.642391922293648!3d60.19892880793209!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!4m14!1i0!3e0!4m5!1s0x46920bc796210691%3A0xcd4ebd843be2f763!2sHelsinki%2C+Finland!3m2!1d60.1733244!2d24.941024799999997!4m5!1s0x468c8ada6606eb9f%3A0x942128136bd0a82a!2sStorfinnhova+G%C3%A5rd%2C+Finnhovantie+163%2C+25860+Nordan%C3%A5%2C+Finland!3m2!1d60.109641999999994!2d22.539268999999997!5e0!3m2!1sen!2suk!4v1410809712874" width="1000" height="450" frameborder="0" style="border:0"></iframe>
+                <h4>Where?</h4>
+                <p>I said, <a href="http://www.storfinnhova.com/">Storfinnhova Gård</a>, <a href="navbar://en.wikipedia.org/wiki/Kimito%C3%B6n_(island)">Kemiönsaari</a>, Suomi! It's "an all-year-around premium center for festivities, conferences and educational-workshops". Should have all our bases covered, then. It's in a forest on an island in Finland. Here's a map:</p>
+                <iframe src="https://www.google.com/maps/embed?pb=!1m29!1m12!1m3!1d507622.53908164304!2d23.642391922293648!3d60.19892880793209!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!4m14!1i0!3e0!4m5!1s0x46920bc796210691%3A0xcd4ebd843be2f763!2sHelsinki%2C+Finland!3m2!1d60.1733244!2d24.941024799999997!4m5!1s0x468c8ada6606eb9f%3A0x942128136bd0a82a!2sStorfinnhova+G%C3%A5rd%2C+Finnhovantie+163%2C+25860+Nordan%C3%A5%2C+Finland!3m2!1d60.109641999999994!2d22.539268999999997!5e0!3m2!1sen!2suk!4v1410809712874" width="1000" height="450" frameborder="0" style="border:0"></iframe>
             </div>
             <div class="row">
               <h4>When?</h4>
-              <ul>
-                <li>2015-07-17 14:00 Bus from Helsinki airport, realising how many trees there are in Finland</li>
-                <li>2015-07-17 18:00 Arrival at venue, introduction to mosquitos</li>
-                <li>2015-07-17 19:00 Pre-wedding BBQ, beers, sauna</li>
+              <h5>Friday 17th July</h5>
+              <ul class="blob">
+                  <li><a href="http://www.matkahuolto.info/lippu/en/connection?date=1.8.2014&departureId=112083&connectionId1=118052&connectionId2=119178&firstChangeDepartureStopAreaId1=3580314&firstChangeDepartureStopAreaId2=3835955&secondChangeDepartureStopAreaId1=3835966&secondChangeDepartureStopAreaId2=3897591&departureStopAreaId=12591&arrivalStopAreaId=329"><img class="silly" src="Matkahuollon-thumb.png"></a><span>2pm </span><span> Bus from Helsinki airport. We might hire a coach
+                </li>
+                <li><img class="silly" src="paarma-thumb.png"><span>6pm</span> Arrival at venue, introduction to mosquitoes </li>
+                <li><a href="https://www.youtube.com/watch?v=XuhGiV-xg-A"><img class="silly" src="sauna-cats-thumb.png"></a><span>6pm</span> Pre-wedding BBQ, sauna
+                <li><a href="http://hipsterbeersnob.com/the-greatest-beer-in-the-world/"><img class="silly" src="delerium-tremens.png"></a><span>8pm</span> Beers.</li>
+                </li>
+                <li><img class="silly" src="finland_stolen_sunset_1_thumb.png"><span>10:35pm</span> Sunset</li>
               </ul>
-              <ul>
-                <li>2015-07-18 12:00 Wedding brunch</li>
-                <li>2015-07-18 12:01 Pimm's O'Clock</li>
-                <li>2015-07-18 18:00 Speeches, rings, vows, etc</li>
-                <li>2015-07-18 19:00 What you came for - dinner</li>
-                <li>2015-07-18 21:00 I guess there has to be music</li>
+              <h5>Saturday 18th July</h5>
+              <ul class="blob">
+                  <li><img class="silly" src="finland_stolen_sunrise_1_thumb.png"><span>4:36am</span> Dawn</li>
+                  <li><img class="silly" src="pimms-oclock.png"><span>12pm</span> Wedding brunch. Alternatives to pickled herring may be available.</li>
+                  <li><img class="silly" src="meanwhile-thumb.png"><span>6pm</span> Admin - Speeches, rings, vows, etc</li>
+                  <li><img class="silly" src="herring-thumb.png"><span>7pm</span> The main event - dinner. Pickled herring for all!</li>
+                  <li><span>9pm</span> I guess there has to be music</li>
+                  <li><img class="silly" src="finland_stolen_sunset_2_thumb.png"><span>10:33pm</span> Sunset</li>
               </ul>
+              <h5>Sunday 19th July</h5>
               <ul>
-                <li>2015-07-19 00:00 Sylvia Sullivan's birthday!</li>
-                <li>2015-07-19 12:00 Go away now please</li>
+                  <li><img class="silly" src="animatedsylvia.gif"><span>12am</span> Sylvia Sullivan's birthday! Party harder! </li>
+                  <li><img class="silly" src="finland_stolen_sunrise_2_thumb.png"><span>4:38am</span> Dawn</li>
+                  <li><a href="http://www.visitfinland.com/"><img class="silly" src="owl-thumb.png"></a><span>12pm</span> Go away now please </li>
               </ul>
             </div>
             <div class="row">
-              <div class="col-md-4">
-                <div class="panel panel-default">
-                  <div class="panel-heading">
-                    <h4>Collaboration tools</h4>
-                  </div>
-                  <div class="panel-body">
-                    <p>I have spent several years setting up Project Management Offices and some time improving office administration and processes in general. This generally involves ensuring the proper tools are in place to enable effective collaboration across geographies, times, cultures and organisations. A good tool set can remove worries about who has the latest file or where the minutes are kept to enable PMO staff to actually manage projects. Yes, I can use SharePoint.</p>
-                    <a href="#collaboration" class="btn btn-default">Learn More</a>
-                  </div>
-                </div>
-              </div>
-              <div class="col-md-4">
-                <div class="panel panel-default">
-                  <div class="panel-heading">
-                    <h4>Random cool stuff</h4>
-                  </div>
-                  <div class="panel-body">
-                    <p>Random cool stuff generally includes machine learning at the moment, because the one thing more satisfying than sorting your pencils by colour is building a machine to do it for you. At time of writing I'm at the end of the doing some training on this, and have just joined Kaggle. I also like hacking together web applications and a bit of hardware work occasionally - some of this may be relevant in a professional context!</p>
-                    <a href="#other" class="btn btn-default">Learn More</a>
-                  </div>
-                </div>
-              </div>
+              <h4>FAQs</h4>
+              <h5>Where will I sleep?</h5>
+              <p>We're booking villas and tree-house-huts at the venue. You shall be assigned appropriate sleeping space.</p>
+              <h5>What should I wear?</h5>
+              <p>We're not going to be formal. Something smart, or something cool. Heels are going to be a liability.</p>
+              <h5>Should I bring gifts?</h5>
+              <p>Only for the <a href="http://en.wikipedia.org/wiki/Haltija">sauna gnomes</a>, not for us, thanks!</p>
+              <h5>What will I eat?</h5>
+              <p>Raoul was joking about the herring. Catering will be vegan-friendly. There will also be meats.</p>
+              <h5>Will I be left to die in the woods if I don't speak Finnish?</h5>
+              <p>Don't worry, you'll be fine. Literally tens of people visit Finland every year, and a surprisingly high percentage leave intact.</p>
+              <h5>How many people will there be?</h5>
+              <p>Around 30-40</p>
+              <h5>Will they be nice?</h5>
+              <p>Yes</p>
+              <h5>How do I get to Finland?</h5>
+              <p>BA, Finnair from Heathrow to Helsinki. Takes about 3hrs, costs about £200 for a return</p>
+              <p>If you can't fly, I suggest rail - London -> Paris -> Copenhagen -> Stockholm, then ferry to Turku.</p>
+			  <h5>Ok, I'm in - what do?</h5>
+              <p>Email us</p>
             </div>
-            <hr>
-            <footer>
-            <p>&copy; Beyond Spreadsheets Ltd 2014</p>
-            </footer>
-        </div> <!-- /container -->
+          </div> <!-- /container -->
         <!-- Bootstrap core JavaScript
         ================================================== -->
         <!-- Placed at the end of the document so the pages load faster -->
