--- a/index.html
+++ b/index.html
@@ -34,7 +34,7 @@
               <h4>When?</h4>
               <h5>Friday 17th July</h5>
               <ul class="blob">
-                  <li><a href="http://www.matkahuolto.info/lippu/en/connection?date=1.8.2014&departureId=112083&connectionId1=118052&connectionId2=119178&firstChangeDepartureStopAreaId1=3580314&firstChangeDepartureStopAreaId2=3835955&secondChangeDepartureStopAreaId1=3835966&secondChangeDepartureStopAreaId2=3897591&departureStopAreaId=12591&arrivalStopAreaId=329"><img class="silly" src="Matkahuollon-thumb.png"></a><span>2pm </span><span> Bus from Helsinki airport. We might hire a coach
+                  <li><a href="http://www.matkahuolto.info/lippu/en/connection?date=1.8.2014&departureId=112083&connectionId1=118052&connectionId2=119178&firstChangeDepartureStopAreaId1=3580314&firstChangeDepartureStopAreaId2=3835955&secondChangeDepartureStopAreaId1=3835966&secondChangeDepartureStopAreaId2=3897591&departureStopAreaId=12591&arrivalStopAreaId=329"><img class="silly" src="matkahuollon-thumb.png"></a><span>2pm </span><span> Bus from Helsinki airport. We might hire a coach
                 </li>
                 <li><img class="silly" src="paarma-thumb.png"><span>6pm</span> Arrival at venue, introduction to mosquitoes </li>
                 <li><a href="https://www.youtube.com/watch?v=XuhGiV-xg-A"><img class="silly" src="sauna-cats-thumb.png"></a><span>6pm</span> Pre-wedding BBQ, sauna
