--- a/index.html
+++ b/index.html
@@ -52,7 +52,7 @@
                   <li><img class="silly" src="finland_stolen_sunset_2_thumb.png"><span>10:33pm</span> Sunset</li>
               </ul>
               <h5>Sunday 19th July</h5>
-              <ul>
+              <ul class="blob">
                   <li><img class="silly" src="animatedsylvia.gif"><span>12am</span> Sylvia Sullivan's birthday! Party harder! </li>
                   <li><img class="silly" src="finland_stolen_sunrise_2_thumb.png"><span>4:38am</span> Dawn</li>
                   <li><a href="http://www.visitfinland.com/"><img class="silly" src="owl-thumb.png"></a><span>12pm</span> Go away now please </li>
