--- a/index.html
+++ b/index.html
@@ -63,7 +63,7 @@
               <h5>Where will I sleep?</h5>
               <p>We're booking villas and tree-house-huts at the venue. You shall be assigned appropriate sleeping space.</p>
               <h5>What should I wear?</h5>
-              <p>We're not going to be formal. Something smart, or something cool. Heels are going to be a liability.</p>
+              <p>We're not going to be too formal. Something smart, or something cool. Heels are going to be a liability. And bring a swimming suit for the sauna!</p>
               <h5>Should I bring gifts?</h5>
               <p>Only for the <a href="http://en.wikipedia.org/wiki/Haltija">sauna gnomes</a>, not for us, thanks!</p>
               <h5>What will I eat?</h5>
