Chilling kitten, sunset times

--- a/index.html
+++ b/index.html
@@ -40,20 +40,21 @@
                 <li><a onclick="showVideo('XuhGiV-xg-A')"><img class="silly" src="sauna-cats-thumb.png"></a><span>6pm</span> Pre-wedding BBQ, sauna
                 <li><a href="http://hipsterbeersnob.com/the-greatest-beer-in-the-world/" target="_blank"><img class="silly" src="delerium-tremens.png"></a><span>8pm</span> Beers.</li>
                 </li>
-                <li><a onclick="showPicture('finland_stolen_sunset_1.jpg')"><img class="silly" src="finland_stolen_sunset_1_thumb.png"></a><span>10:35pm</span> Sunset</li>
+                <li><a onclick="showPicture('finland_stolen_sunset_1.jpg')"><img class="silly" src="finland_stolen_sunset_1_thumb.png"></a><span>11:30pm</span> Sunset</li>
               </ul>
               <h5>Saturday 18th July</h5>
               <ul class="blob">
-                <li><a onclick="showPicture('finland_stolen_sunrise_1.jpg')"><img class="silly" src="finland_stolen_sunrise_1_thumb.png"></a><span>4:36am</span> Dawn</li>
+                <li><a onclick="showPicture('finland_stolen_sunrise_1.jpg')"><img class="silly" src="finland_stolen_sunrise_1_thumb.png"></a><span>3am</span> Dawn</li>
                 <li><a onclick="showPicture('pimms.jpg')"><img class="silly" src="pimms-oclock.png"></a><span>12pm</span> Wedding brunch. Alternatives to pickled herring may be available.</li>
+                <li><a onclick="showPicture('chilling-kitten.jpg')"><img class="silly" src="chilling-kitten-thumb.png"></a><span>2pm</span>Chillout time. Enjoy the forest!</li>
                 <li><a onclick="showPicture('meanwhile.jpg')"><img class="silly" src="meanwhile-thumb.png"></a><span>6pm</span> Admin - Speeches, rings, vows, etc</li>
                 <li><a onclick="showPicture('herring.jpg')"><img class="silly" src="herring-thumb.png"></a><span>7pm</span> The main event - dinner. Pickled herring for all!</li>
                 <li><a href="https://www.youtube.com/watch?v=dQw4w9WgXcQ" target="_blank"><img class="silly" src="hamstermusic.png"></a><span>9pm</span> I guess there has to be music</li>
-                  <li><a onclick="showPicture('finland_stolen_sunset_2.jpg')"><img class="silly" src="finland_stolen_sunset_2_thumb.png"></a><span>10:33pm</span> Sunset</li>
+                  <li><a onclick="showPicture('finland_stolen_sunset_2.jpg')"><img class="silly" src="finland_stolen_sunset_2_thumb.png"></a><span>11:30pm</span> Sunset</li>
               </ul>
               <h5>Sunday 19th July</h5>
               <ul class="blob">
-                  <li><img class="silly" src="animatedsylvia.gif"><span>12am</span> Sylvia Sullivan's birthday! Party harder! </li>
+                  <li><img class="silly" src="animatedsylvia.gif"><span>3am</span> Sylvia Sullivan's birthday! Party harder! </li>
                   <li><a onclick="showPicture('finland_stolen_sunrise_2.jpg')"><img class="silly" src="finland_stolen_sunrise_2_thumb.png"></a><span>4:38am</span> Dawn</li>
                   <li><a href="http://www.visitfinland.com/" target="_blank"><img class="silly" src="owl-thumb.png"></a><span>12pm</span> Go away now please </li>
               </ul>
@@ -78,7 +79,7 @@
               <p>BA, Finnair from Heathrow to Helsinki. Takes about 3hrs, costs about £200 for a return</p>
               <p>If you can't fly, I suggest rail - London -> Paris -> Copenhagen -> Stockholm, then ferry to Turku.</p>
               <h5>Ok, I'm in - what do?</h5>
-              <p>Email us</p>
+              <p><a class="myButton">Email us</a></p>
             </div>
           </div> <!-- /container -->
           <div class="modal fade" id="myModal" tabindex="-1" role="dialog" aria-labelledby="myModalLabel" aria-hidden="true">
@@ -92,6 +93,12 @@
         <!-- Placed at the end of the document so the pages load faster -->
         <script src="https://ajax.googleapis.com/ajax/libs/jquery/1.11.1/jquery.min.js"></script>
         <script src="pointless.js"></script>
+        <script src="jquery.raptorize.1.0.js"></script>
+        <script type="text/javascript">
+               $(window).load(function() {
+                             $('.myButton').raptorize();
+                                  });
+                                </script>
         <!-- Latest compiled and minified JavaScript -->
         <script src="http://maxcdn.bootstrapcdn.com/bootstrap/3.2.0/js/bootstrap.min.js"></script>
     </body>
