--- a/index.html
+++ b/index.html
@@ -79,7 +79,7 @@
               <p>BA, Finnair from Heathrow to Helsinki. Takes about 3hrs, costs about £200 for a return</p>
               <p>If you can't fly, I suggest rail - London -> Paris -> Copenhagen -> Stockholm, then ferry to Turku.</p>
               <h5>Ok, I'm in - what do?</h5>
-              <p><a class="myButton">Email us</a></p>
+              <p>Email one of us</p>
             </div>
           </div> <!-- /container -->
           <div class="modal fade" id="myModal" tabindex="-1" role="dialog" aria-labelledby="myModalLabel" aria-hidden="true">
