Changes formatting for language switching links

--- a/index.html
+++ b/index.html
@@ -21,7 +21,7 @@
             <div class="jumbotron">
                 <div class="container main-width">
                     <h1>Salla and Raoul's wedding</h1>
-                    <h1><a href="/suomeksi.html">Suomeksi</a></h1>
+                    <h2><em><a href="/suomeksi.html">(Suomeksi)</a></em></h2>
                     <div class="subheading"><p>17th - 19th July, 2015</p>
                         <p><a href="http://www.storfinnhova.com/">Storfinnhova Gård</a>, <a href="http://en.wikipedia.org/wiki/Kimito%C3%B6n_(island)">Kemiönsaari</a>, Suomi</p></div>
                 </div>
