--- a/suomeksi.html
+++ b/suomeksi.html
@@ -21,7 +21,7 @@
             <div class="jumbotron">
                 <div class="container main-width">
                     <h1> Sallan and Stephen Raoulin häät </h1>
-                    <h2><em><a href="/index.html">(In English)</a></em></h2>
+                    <h2><em><a href="/wedding/index.html">(In English)</a></em></h2>
                     <div class="subheading"><p>17. - 19. heinäkuuta, 2015</p>
                         <p><a href="http://www.storfinnhova.com/">Storfinnhova Gård</a>, <a href="http://en.wikipedia.org/wiki/Kimito%C3%B6n_(island)">Kemiönsaari</a>, Suomi</p></div>
                 </div>
