--- a/index.html
+++ b/index.html
@@ -19,7 +19,7 @@
     <body>
         <div class="container main-width">
             <div class="jumbotron">
-                <div class="container main-width">
+                <div class="container main-width text-center">
                     <h1>Salla and Raoul's wedding</h1>
                     <h2><em><a href="/wedding/suomeksi.html">(Suomeksi)</a></em></h2>
                     <div class="subheading"><p>17th - 19th July, 2015</p>
