--- a/suomeksi.html
+++ b/suomeksi.html
@@ -19,7 +19,7 @@
 <body>
         <div class="container main-width">
             <div class="jumbotron">
-                <div class="container main-width">
+                <div class="container main-width text-center">
                     <h1> Sallan and Stephen Raoulin häät </h1>
                     <h2><em><a href="/wedding/index.html">(In English)</a></em></h2>
                     <div class="subheading"><p>17. - 19. heinäkuuta, 2015</p>
