--- a/suomeksi.html
+++ b/suomeksi.html
@@ -47,7 +47,7 @@
                   <li><img class="silly" src="pimms-oclock.png"><span>12:00</span> Hää-brunssi. Saatamme tarjota muutakin kuin silliä </li>
                   <li><img class="silly" src="meanwhile-thumb.png"><span>18:00</span> Puheet, sormukset ja muu sellainen </li>
                   <li><img class="silly" src="herring-thumb.png"><span>19:00</span> Pääasia: illallinen. Silliä kaikille!</li>
-                  <li><a href="https://www.youtube.com/watch?v=dQw4w9WgXcQ" target="_blank"><img class="silly" src="hamstermusic.png"><span>21:00</span> Kai pitää olla jotain musiikkia…</li>
+                  <li><a href="https://www.youtube.com/watch?v=dQw4w9WgXcQ" target="_blank"><img class="silly" src="hamstermusic.png"></a><span>21:00</span> Kai pitää olla jotain musiikkia…</li>
                   <li><img class="silly" src="finland_stolen_sunset_2_thumb.png"><span>22:33</span> Auringonlasku</li>
               </ul>
               <h5>Sunnuntaina 19 heinäkuuta</h5>
@@ -71,7 +71,7 @@
               <p>Varmaan noin 30-40</p>
               <h5>Ovatko he mukavia?</h5>
               <p>Kyllä</p>
-			  <h5>Ok, olen tulossa. Mitä nyt?</h5>
+	      <h5>Ok, olen tulossa. Mitä nyt?</h5>
               <p>Lähetä sähköpostia tai soita meille</p>
             </div>
           </div> <!-- /container -->
